@@ -22,3 +22,5 @@ ERROR_ITEMS_LIST = "'%s': length of list should be %d"
 ERROR_READONLY_FIELD = "field '%s' is read-only"
 ERROR_MAX_VALUE = "max value for field '%s' is %d"
 ERROR_MIN_VALUE = "min value for field '%s' is %d"
+ERROR_EMPTY_BAD_TYPE = "'empty' rule only applies to string fields"
+ERROR_EMPTY_NOT_ALLOWED = "empty values not allowed for field '%s'"
